<resources>
    <string name="app_name">RON</string>
    <string name="connecting">Đang kết nối tới server</string>
    <string name="title_alert_dialog">Thông Báo</string>
    <string name="network_not_avaiable">Không thể kết nối internet. Làm ơn kiểm tra lại!</string>
    <string name="server_error">Bị lỗi khi kết nối đến server. Làm ơn thử lại!</string>

    <!-- Sign In -->
    <string name="sign_in">Đăng nhập</string>
    <string name="code_sign_in">Nhập mã đăng nhập</string>

    <!--Home -->
    <string name="sale">Bán Hàng</string>
    <string name="report">Báo Cáo</string>
    <string name="account">Thu Chi Khác</string>
    <string name="off_work">Ra Ca</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="config">Cấu Hình</string>
    <string name="company_name">RONVIET V1.9.9</string>
    <string name="website">Website : http://ronviet.vn</string>
    <string name="hotline">Hotline : 0901.844.558</string>

    <!-- Menu -->
    <string name="separate_table">Tách Bàn</string>
    <string name="move_table">Chuyển Bàn</string>
    <string name="join_table">Ghép Bàn</string>
    <string name="return_order">Xem Phiếu</string>

    <string name="food">ĐỒ ĂN</string>
    <string name="drink">ĐỒ UỐNG</string>
    <string name="others">KHÁC</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="total">T.Tiền :</string>
    <string name="submit_order">Gửi Order</string>

    <!-- Screen Name -->
    <string name="title_table_map">SƠ ĐỒ BÀN</string>
    <string name="title_list_order">DANH SÁCH ORDER</string>
    <string name="title_return_order">DANH SÁCH ĐÃ ORDER</string>
    <string name="title_add_list">THÊM MÓN</string>
    <string name="title_select_table">ĐANG CHỌN</string>

    <!-- Add Order -->
    <string name="input_order">Nhập số lượng muốn order</string>
    <string name="noted">Ghi chú</string>

    <!-- Order -->
    <string name="before_change_order">SL hiện tại  :</string>
    <string name="change_order">SL trả lại  :</string>
    <string name="after_change_order">Số lượng còn lại  :</string>
    <string name="confirm">XÁC NHẬN</string>

    <!-- First Config -->
    <string name="config_website">Website :</string>
    <string name="config_id_trung_tam">ID Trung Tâm :</string>
    <string name="config_id_may">ID Máy :</string>
    <string name="config_ngon_ngu">Ngôn Ngữ :</string>

    <!--Message-->

    <string name="validate_so_luong_con_lai">Số lượng trả lại phải nhỏ hơn số lượng hiện tại</string>
    <string name="validate_chuyen_ban">Bạn không chuyển được phiếu qua bàn đã có khách</string>
    <string name="message_confirm">Bạn có muốn thực hiện chức năng này?</string>
    <string name="field_required">Làm ơn nhập đầy đủ các trường ở trên!</string>
    <string name="input_config_required">Làm ơn nhập config cho app!</string>
    <string name="input_code">Làm ơn nhập mã đăng nhập!</string>
    <string name="code_incorrect">Nhập mã không đúng. Làm ơn nhập lại!</string>
    <string name="message_confirm_out_order_screen">Tồn tại mặt hàng chưa gửi order. Bạn muốn tiếp tuc không?</string>
    <string name="message_confirm_exit">Bạn có muốn thoát ứng dụng không?</string>
    <string name="ok">ĐỒNG Ý</string>
    <string name="cancel">HỦY BỎ</string>
    <string name="delete">XÓA</string>
    <string name="title_message">Thông Báo</string>
    <string name="message_confirm_move_to_add_order">Số lượng mặt hàng đã thay đổi, bạn có muốn tiếp tục không?</string>
    <string name="massage_cancel_return_order">Số lượng mặt hàng đã thay đổi bạn có muốn <b>HỦY</b> thao tác trả hàng không?</string>


</resources>
