<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context="com.ronviet.ron.activities.FirstConfigActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/color_sep"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/config_website"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2.5"
                    android:id="@+id/edt_web_site"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_sep"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/config_id_trung_tam"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2.5"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:id="@+id/edt_id_trung_tam"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_sep"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/config_id_may"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2.5"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:id="@+id/edt_id_may"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_sep"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/config_ngon_ngu"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2.5"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:id="@+id/edt_id_ngon_ngu"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_sep"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textColor="@android:color/holo_blue_light"
                android:id="@+id/btn_ok"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@android:color/holo_blue_light"
                android:id="@+id/btn_cancel"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
