<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/before_change_order"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        android:id="@+id/tv_prod_name"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_sep"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/before_change_order"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        android:textSize="18sp"
        android:id="@+id/tv_before_change_order"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_sep"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_order"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_change_order"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="1"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:background="@color/transparent">
        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_sep"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/after_change_order"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        android:textSize="18sp"
        android:id="@+id/tv_after_change_order"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_sep"/>
</LinearLayout>