<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ronviet.ron.activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="@color/header_color">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@android:color/white"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_avarta_user"
                    android:id="@+id/iv_avatar"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:layout_weight="3"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:text="Huy Le"
                    android:id="@+id/tv_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textStyle="italic"
                    android:text="Nhan vien"
                    android:id="@+id/tv_position"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textStyle="italic"
                    android:textColor="@android:color/white"
                    android:text="Ca 1"
                    android:id="@+id/tv_working_time"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textStyle="italic"
                    android:text="31/12/2016"
                    android:id="@+id/tv_data"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!--Sale Button-->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_button"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/background_rectangle_highlight"
                        android:id="@+id/btn_sale">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/sale"
                            android:layout_marginBottom="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sale"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_button"/>
                    </LinearLayout>
                </FrameLayout>
                <!-- Report Button -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_button"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/background_rectangle_highlight"
                        android:layout_weight="1">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/report"
                            android:layout_marginBottom="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/report"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_button"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!--Accountant Button -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_button"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/background_rectangle_highlight">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/accountant"
                            android:layout_marginBottom="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_button"/>
                    </LinearLayout>

                </FrameLayout>
                <!-- Off Work -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_button"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/background_rectangle_highlight">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/off_work"
                            android:layout_marginBottom="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/off_work"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_button"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!--Change Password Button -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_button"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/background_rectangle_highlight">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/change_pass" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_password"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_button"/>
                    </LinearLayout>

                </FrameLayout>
                <!-- Config -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_button"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/background_rectangle_highlight">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/config"
                            android:layout_marginBottom="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/config"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_button"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textStyle="italic"
            android:textColor="@color/text_link"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotline"
            android:textStyle="italic"
            android:textColor="@color/text_link"/>
    </LinearLayout>
</RelativeLayout>
