<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context="com.ronviet.ron.activities.SaleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <include layout="@layout/header_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:id="@+id/ln_sub_menu"
            android:animateLayoutChanges="true"
            android:visibility="gone">

            <!-- Separate Table-->
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/height_sub_menu_button"
                android:padding="5dp"
                android:layout_weight="1"
                android:id="@+id/fl_separate_table">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle_highlight">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/sep_table"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/separate_table"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_sub_menu_button"/>
                </LinearLayout>
            </FrameLayout>

            <!-- Join Table -->
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/height_sub_menu_button"
                android:padding="5dp"
                android:layout_weight="1"
                android:id="@+id/fl_join_table">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle_highlight"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/join_table"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_table"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_sub_menu_button"/>
                </LinearLayout>
            </FrameLayout>

            <!-- Return Order -->
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/height_sub_menu_button"
                android:padding="5dp"
                android:layout_weight="1"
                android:id="@+id/fl_return_order">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle_highlight"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/return_order"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/return_order"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_sub_menu_button"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:id="@+id/recycler_view_tables"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lavender"
        android:layout_alignParentBottom="true"
        android:id="@+id/recycler_view_area" />

</RelativeLayout>
